<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <TextView
        android:id="@+id/payment_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/payment_method_title"
        android:textAlignment="center"
        android:textColor="#030303"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_tv_title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/payment_cb_cash"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payment_tv_cash_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="#030303"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/payment_tv_cash_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/payment_iv_cash"
                android:layout_width="110dp"
                android:layout_height="110dp"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/payment_cb_card"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payment_tv_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="#030303"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/payment_tv_card_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/payment_iv_card"
                android:layout_width="110dp"
                android:layout_height="110dp"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/payment_cb_electronic"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payment_tv_electronic_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="#030303"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/payment_tv_electronic_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/payment_iv_electronic"
                android:layout_width="110dp"
                android:layout_height="110dp"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/payment_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/payment_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_next" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>